--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@vitejs/plugin-vue": "^6.0.4",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "chart.js": "^4.5.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
